# slackcat

./: Makefile  README.md  pyproject.toml  sample-config.toml
.github/workflows/: python-package.yml
slackcat/: cache.py  config.py  message.py  slack_iter.py  utils.py
slackcat/entry_point/: main.py
tests/: test_cache.py  test_sanity.py
